[gd_scene load_steps=9 format=3 uid="uid://cjqb26cj5laga"]

[ext_resource type="Script" uid="uid://748i4hktkla" path="res://miscellenaous/energy_tank.gd" id="1_c4k0e"]
[ext_resource type="Texture2D" uid="uid://ch8sh8tc123xd" path="res://assets/sprites/miscelleaneous/items_miscellaneous_MM6(16x16).png" id="2_oow8c"]
[ext_resource type="AudioStream" uid="uid://050kkt3li38u" path="res://assets/sounds/1up.wav" id="3_yk02i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ow1ny"]
atlas = ExtResource("2_oow8c")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7ile"]
atlas = ExtResource("2_oow8c")
region = Rect2(144, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dplej"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow1ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7ile")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sn48k"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yaxfl"]
size = Vector2(16, 16)

[node name="energy_tank" type="RigidBody2D"]
collision_layer = 0
script = ExtResource("1_c4k0e")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dplej")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_sn48k")

[node name="sound_effect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yk02i")
volume_db = -10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yaxfl")
debug_color = Color(0.858824, 0.360784, 0, 0.419608)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="sound_effect" to="." method="_on_audio_stream_player_finished"]
